--- a/src/views/AboutView.fxml
+++ b/src/views/AboutView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.Image?>
@@ -166,13 +167,21 @@
                   </Label>
                </children>
             </Pane>
-            <Pane fx:id="userGuide" layoutX="60.0" layoutY="277.0" prefHeight="603.0" prefWidth="1082.0">
+            <Pane fx:id="userGuide" layoutX="60.0" layoutY="277.0" prefHeight="603.0" prefWidth="1082.0" visible="false">
                <children>
-                  <TextArea editable="false" prefHeight="603.0" prefWidth="1082.0" stylesheets="@../stylesheets/textAreaStyling.css" text="User Guide Text!">
+                  <TextArea editable="false" layoutX="-6.0" prefHeight="603.0" prefWidth="1082.0" stylesheets="@../stylesheets/textAreaStyling.css" text="            Organised is a system aimed at university students, who feel the need to get organised in their studies. It is&#10;comprised of 4 main sections, visible on the left: Marks, Time, Schedule and Tasks. Whilst navigating through the&#10;system, keep in mind that you might need to complete one section before moving to the other. For example, add&#10;years and modules in Marks and then move to study period addition in Time.&#10;&#10;     -&#9;     Profile.&#10;             Your statistics. Populate Organised with information and see your profile update based on your progress. &#10;     -&#9;     Marks.&#10;             Add your Years, Modules &amp; Assignments. When you complete your assignments, add your marks to&#10;             Organised and get grade calculations for each module and each year.&#10;     -&#9;     Time.&#10;             Add your Periods (such as Year 1 Semester 1, Year 2 Spring Vacation, etc.) and track how much time you&#10;             work during the day. Get statistics about each day and week and compare them amongst themselves or &#10;             other periods.&#10;     -&#9;    Schedule.&#10;            Add Events to your periods and get your schedule Organised. Such events as lectures, which repeat over &#10;            multiple weeks, can be added as recurring events to save time.&#10;     -&#9;    Tasks.&#10;            Add Tasks to your periods &amp; weeks and always be Organised with your activities. Tasks which need to be &#10;            repeated in multiple weeks can be added as recurring tasks-in the same manner as events. Observe your &#10;            progress and know what needs to be done when.&#10;&#10;            Check out             for more information.&#10;">
                      <font>
                         <Font name="Arial" size="20.0" />
                      </font>
                   </TextArea>
+                  <Label layoutX="172.0" layoutY="534.0" onMouseClicked="#githubLinkClicked" prefHeight="21.0" prefWidth="59.0" text="Github" textFill="#e6bb9a">
+                     <font>
+                        <Font name="Arial" size="20.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Label>
                </children>
             </Pane>
             <Pane fx:id="behindTheScenesButton" layoutX="370.0" layoutY="128.0" onMouseClicked="#behindTheScenesButtonClicked" onMouseEntered="#behindTheScenesButtonHovered" onMouseExited="#behindTheScenesButtonExited" prefHeight="68.0" prefWidth="264.0" style="-fx-border-style: solid; -fx-border-color: white; -fx-border-width: 3; -fx-border-radius: 20;">
@@ -189,13 +198,37 @@
                   </Label>
                </children>
             </Pane>
-            <Pane fx:id="behindTheScenes" layoutX="60.0" layoutY="277.0" prefHeight="603.0" prefWidth="1082.0">
+            <Pane fx:id="behindTheScenes" layoutX="60.0" layoutY="277.0" prefHeight="603.0" prefWidth="1082.0" visible="false">
                <children>
-                  <TextArea editable="false" prefHeight="603.0" prefWidth="1082.0" stylesheets="@../stylesheets/textAreaStyling.css" text="Behind the Scenes Text!">
+                  <TextArea editable="false" prefHeight="603.0" prefWidth="1082.0" stylesheets="@../stylesheets/textAreaStyling.css" text="Organised is a system made for university students by a university student and aims to be as simple as possible by&#10;usage and construction both. Organised contains:&#10;&#10;     -&#9;     One university             ;&#10;&#10;     -&#9;     Java for back-end;&#10;&#10;     -&#9;     JavaFX for front-end;&#10;&#10;     -&#9;     SQLite for a database;&#10;&#10;     -&#9;     Icons from              ;&#10;&#10;     -&#9;     Installer made with Inno Setup.&#10;&#10;Full codebase is available on            .&#10;">
                      <font>
                         <Font name="Arial" size="20.0" />
                      </font>
                   </TextArea>
+                  <Label layoutX="276.0" layoutY="368.0" onMouseClicked="#githubLinkClicked" prefHeight="21.0" prefWidth="59.0" text="Github" textFill="#e6bb9a">
+                     <font>
+                        <Font name="Arial" size="20.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Label>
+                  <Label layoutX="218.0" layoutY="79.0" onMouseClicked="#studentLinkClicked" prefHeight="23.0" prefWidth="80.0" text="student" textFill="#e6bb9a">
+                     <font>
+                        <Font name="Arial" size="20.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Label>
+                  <Label layoutX="185.0" layoutY="271.0" onMouseClicked="#materialLinkClicked" prefHeight="23.0" prefWidth="80.0" text="Material" textFill="#e6bb9a">
+                     <font>
+                        <Font name="Arial" size="20.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Label>
                </children>
             </Pane>
             <Pane fx:id="copyrightResourcesButton" layoutX="670.0" layoutY="128.0" onMouseClicked="#copyrightResourcesButtonClicked" onMouseEntered="#copyrightResourcesButtonHovered" onMouseExited="#copyrightResourcesButtonExited" prefHeight="68.0" prefWidth="264.0" style="-fx-border-style: solid; -fx-border-color: white; -fx-border-width: 3; -fx-border-radius: 20;">
@@ -205,7 +238,7 @@
                         <Image url="@../images/copyright_icon.png" />
                      </image>
                   </ImageView>
-                  <Label fx:id="copyrightResourcesButtonLabel" alignment="CENTER" layoutX="61.0" layoutY="4.0" prefHeight="60.0" prefWidth="189.0" style="-fx-wrap-text: true; -fx-text-alignment: center;" text="Copyright &amp; Resources" textFill="#e6bb9a">
+                  <Label fx:id="copyrightResourcesButtonLabel" alignment="CENTER" layoutX="61.0" layoutY="4.0" prefHeight="60.0" prefWidth="189.0" style="-fx-wrap-text: true; -fx-text-alignment: center;" text="Copyright" textFill="#e6bb9a">
                      <font>
                         <Font name="Arial Rounded MT Bold" size="24.0" />
                      </font>
@@ -214,11 +247,19 @@
             </Pane>
             <Pane fx:id="copyrightResources" layoutX="60.0" layoutY="277.0" prefHeight="603.0" prefWidth="1082.0">
                <children>
-                  <TextArea editable="false" prefHeight="603.0" prefWidth="1082.0" stylesheets="@../stylesheets/textAreaStyling.css" text="Copyright &amp; Resources Text!">
+                  <TextArea editable="false" prefHeight="603.0" prefWidth="1082.0" stylesheets="@../stylesheets/textAreaStyling.css" text="Organised.&#10;&#10;Copyright © 2021, Agne Knietaite&#10;&#10;All rights reserved.&#10;&#10;The source code of the application is licensed under the GNU General Public License 3.0, which can be found        .&#10;&#10;This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public &#10;License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later&#10;version.&#10;&#10;This program is distributed in the hope that it will be useful, but without any warranty; without even the implied&#10;warranty of merchantability or fitness for a particular purpose.  See the GNU General Public License for more details.&#10;">
                      <font>
                         <Font name="Arial" size="20.0" />
                      </font>
                   </TextArea>
+                  <Label layoutX="991.0" layoutY="150.0" onMouseClicked="#licenseLinkClicked" prefHeight="23.0" prefWidth="45.0" text="here" textFill="#e6bb9a">
+                     <font>
+                        <Font name="Arial" size="20.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Label>
                </children>
             </Pane>
          </children></Pane>
